# ED_Lattice

./: .gitignore  CMakeLists.txt  README.md  setup.py
cmake/: FortranCompilerConfig.cmake  PostConfig.cmake
etc/: edlat.pc.in
etc/environment_modules/: module.in
python/edlatpy/: __init__.py
src/: AUX_FUNX.f90  CMakeLists.txt  DENSITY_MATRIX.f90  EDlattice.f90  EIGENSPACE.f90  ENERGY.f90  GRAPH_MATRIX.f90  INPUT_VARS.f90  IO.f90  MAIN.f90  OBSERVABLES.f90  SECTOR.f90  SETUP.f90  SPARSE_MATRIX.f90  VARS_GLOBAL.f90
src/CHI/: CHI_FUNCTIONS.f90  CHI_SPIN.f90  CHI_SPIN_ELECTRONS.f90  CHI_SPIN_IMPURITIES.f90  CMakeLists.txt
src/DIAG/: CMakeLists.txt  DIAG.f90  HAMILTONIAN.f90  HAMILTONIAN_COMMON.f90  HAMILTONIAN_DIRECT_HxV.f90  HAMILTONIAN_STORED_HxV.f90
src/DIAG/direct/: HxV_diag.f90  HxV_dw.f90  HxV_eph.f90  HxV_hop.f90  HxV_kondo.f90  HxV_local.f90  HxV_muhf.f90  HxV_non_local.f90  HxV_se_ph.f90  HxV_up.f90
src/DIAG/direct_mpi/: HxV_dw.f90  HxV_eph.f90  HxV_local.f90  HxV_muhf.f90  HxV_non_local.f90  HxV_up.f90
src/DIAG/stored/: H_diag.f90  H_dw.f90  H_e_ph.f90  H_hop.f90  H_kondo.f90  H_local.f90  H_muhf.f90  H_non_local.f90  H_se_ph.f90  H_up.f90
src/GF/: CMakeLists.txt  GF_ELECTRON.f90  GF_ELECTRONS.f90  GF_IMPURITIES.f90  GF_PHONON.f90  GREENS_FUNCTIONS.f90
src/OC/: CMakeLists.txt  OC_ELECTRONS.f90  OC_FUNCTIONS.f90
src/edlat2py/: edlat2py.f90
